syntax = "proto3";

package auth.v1alpha;

option go_package = "stubs";

enum UserRole {
  BASIC = 0;
  MERCHANT = 1;
  ADMIN = 2;
}

service AuthService {
  rpc Login(LoginRequest) returns (LoginResponse) {}
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse) {}
  rpc Validate(ValidateRequest) returns (ValidateResponse) {}
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string refresh_token = 1;
  string jwt = 2;
  enum STATUS {
    OK = 0;
    WRONG_PASSWORD = 1;
    NOT_FOUND = 2;
    INTERNAL = 3;
  }
  STATUS status = 3;
}

message RefreshTokenRequest {
  string refresh_token = 1;
}

message RefreshTokenResponse {
  string refresh_token = 1;
  string jwt = 2;
}

message ValidateRequest {
  string jwt = 1;
  // Add role here
}

message ValidateResponse {
  bool ok = 1;
  string userId = 2;
  string userEmail = 3;
  UserRole userRole = 4;
  bool internal = 5;
}
